<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.weekendizer.MainActivity$PlaceholderFragment" >
    
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <Button
            android:id="@+id/enterDestination"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/enterDestination"
	        android:textSize="13sp"
	        style="?android:attr/borderlessButtonStyle" />
        
        <Button
            android:id="@+id/removeDestination"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/removeDestination"
	        android:textSize="13sp"
	        android:visibility="gone"
	        style="?android:attr/borderlessButtonStyle" />
        
        <Button
            android:id="@+id/weekendize"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/weekendize"
	        android:textSize="13sp"
	        style="?android:attr/borderlessButtonStyle" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/budget"
        android:orientation="horizontal"
        android:layout_above="@id/buttonLayout"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:text="@string/budget"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>
    
	    <EditText 
	        android:id="@+id/budgetPrompt"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/budgetPrompt" />
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/destinationCity"
        android:orientation="horizontal"
        android:layout_above="@id/budget"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >
	    
        <TextView
	        android:text="@string/destinationCity"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>
    
	    <Spinner 
	        android:id="@+id/destinationCityPrompt"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/originCity"
        android:orientation="horizontal"
        android:layout_above="@id/destinationCity"
        android:layout_centerInParent="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	    
        <TextView
	        android:text="@string/originCity"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"/>
    
	    <Spinner
	        android:id="@+id/originCityPrompt"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" />
    </LinearLayout>
  
</RelativeLayout>
